bindings/lisp/fae/processor.lisp

(in-package :cl-user)
(defctype processor-info (:pointer :void))
(defctype processor-samples (:pointer ptr))
(defctype processor-interface (:pointer :void))
(define-foreign-type processor-type () () (:actual-type :pointer))
(define-parse-method processor () (make-instance 'processor-type))
(defclass processor () ((processor-ptr :initarg :processor-ptr)))
(defmethod translate-to-foreign (x (type processor-type)) (slot-value x 'processor-ptr))
(defmethod translate-from-foreign (x (type processor-type)) (make-instance 'processor :processor-ptr x))
(defcfun (processor-input-type "fae_processor_input_type") type (a processor))
(defcfun (processor-output-type "fae_processor_output_type") type (a processor))
(defcfun (processor-buffer-size "fae_processor_buffer_size") :int32 (a type-frames) (b processor))
(defcfun (processor-address "fae_processor_address") ptr (a processor))
(defcfun (processor-graph "fae_processor_graph") graph (a processor) (b (:pointer processor-info)) (c graph))
(defcfun (processor-write-graph "fae_processor_write_graph") :void (a processor) (b string-file-path))
(defcfun (processor-identity "fae_processor_identity") processor (a type))
(defcfun (processor-constant "fae_processor_constant") processor (a type) (b type) (c ptr))
(defcfun (processor-delay "fae_processor_delay") processor (a type) (b :int32))
(defcfun (processor-split "fae_processor_split") processor (a type))
(defcfun (processor-unary "fae_processor_unary") processor (a type) (b type) (c unary) (d ptr))
(defcfun (processor-binary "fae_processor_binary") processor (a type) (b type) (c type) (d binary) (e ptr))
(defcfun (processor-parallel "fae_processor_parallel") processor (a processor) (b processor))
(defcfun (processor-sequence "fae_processor_sequence") processor (a processor) (b processor))
(defcfun (processor-compose "fae_processor_compose") processor (a processor) (b processor))
(defcfun (processor-loop "fae_processor_loop") processor (a processor))
(defcfun (processor-add "fae_processor_add") processor (a type))
(defcfun (processor-subtract "fae_processor_subtract") processor (a type))
(defcfun (processor-multiply "fae_processor_multiply") processor (a type))
(defcfun (processor-power "fae_processor_power") processor (a type))
(defcfun (processor-divide "fae_processor_divide") processor (a type))
(defcfun (processor-modulo "fae_processor_modulo") processor (a type))
(defcfun (processor-absolute "fae_processor_absolute") processor (a type))
(defcfun (processor-not "fae_processor_not") processor (a type))
(defcfun (processor-and "fae_processor_and") processor (a type))
(defcfun (processor-or "fae_processor_or") processor (a type))
(defcfun (processor-xor "fae_processor_xor") processor (a type))
(defcfun (processor-bit-not "fae_processor_bit_not") processor (a type))
(defcfun (processor-bit-and "fae_processor_bit_and") processor (a type))
(defcfun (processor-bit-or "fae_processor_bit_or") processor (a type))
(defcfun (processor-bit-xor "fae_processor_bit_xor") processor (a type))
(defcfun (processor-shift-left "fae_processor_shift_left") processor (a type))
(defcfun (processor-shift-right "fae_processor_shift_right") processor (a type))
(defcfun (processor-equal "fae_processor_equal") processor (a type))
(defcfun (processor-less-than "fae_processor_less_than") processor (a type))
(defcfun (processor-greater-than "fae_processor_greater_than") processor (a type))
(defcfun (processor-less-than-equal "fae_processor_less_than_equal") processor (a type))
(defcfun (processor-greater-than-equal "fae_processor_greater_than_equal") processor (a type))
(defcfun (processor-acos "fae_processor_acos") processor (a type))
(defcfun (processor-asin "fae_processor_asin") processor (a type))
(defcfun (processor-atan "fae_processor_atan") processor (a type))
(defcfun (processor-cos "fae_processor_cos") processor (a type))
(defcfun (processor-sin "fae_processor_sin") processor (a type))
(defcfun (processor-tan "fae_processor_tan") processor (a type))
(defcfun (processor-exp "fae_processor_exp") processor (a type))
(defcfun (processor-log "fae_processor_log") processor (a type))
(defcfun (processor-log10 "fae_processor_log10") processor (a type))
(defcfun (processor-pow "fae_processor_pow") processor (a type))
(defcfun (processor-sqrt "fae_processor_sqrt") processor (a type))
(defcfun (processor-abs "fae_processor_abs") processor (a type))
(defcfun (processor-min "fae_processor_min") processor (a type))
(defcfun (processor-max "fae_processor_max") processor (a type))
(defcfun (processor-fmod "fae_processor_fmod") processor (a type))
(defcfun (processor-floor "fae_processor_floor") processor (a type))
(defcfun (processor-ceil "fae_processor_ceil") processor (a type))
(defcfun (processor-rint "fae_processor_rint") processor (a type))